--- a/weather-report/pom.xml
+++ b/weather-report/pom.xml
@@ -82,6 +82,13 @@
       <scope>test</scope>
     </dependency>
 
+    <dependency>
+      <groupId>uk.org.webcompere</groupId>
+      <artifactId>system-stubs-jupiter</artifactId>
+      <version>1.1.0</version>
+      <scope>test</scope>
+    </dependency>
+
 
   </dependencies>
 
