--- a/.github/workflows/weather-report-build.yml
+++ b/.github/workflows/weather-report-build.yml
@@ -6,6 +6,10 @@ on:
     branches:
       - main
       - dev
+	
+	paths:
+	- weather-report/**
+    - .github/workflows/weather-report-build.yml 
 
 # Trabajos
 
@@ -28,6 +32,6 @@ jobs:
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
       - name: Build with Maven
-        run: mvn -B install --file pom.xml
+        run: mvn -B install --file weather-report/pom.xml
 
 
