--- a/weather-report/pom.xml
+++ b/weather-report/pom.xml
@@ -18,6 +18,18 @@
     <maven.compiler.target>11</maven.compiler.target>
   </properties>
 
+  <scm>
+    <developerConnection>scm:git:https://github.com/martinicr/tec-bd1.git</developerConnection>
+  </scm>
+
+  <distributionManagement>
+    <repository>
+      <id>github</id>
+      <name>GitHub Packages</name>
+      <url>https://maven.pkg.github.com/martinicr/tec-bd1</url>
+    </repository>
+  </distributionManagement>
+
   <dependencies>
 
     <dependency>
@@ -134,6 +146,16 @@
           <artifactId>maven-project-info-reports-plugin</artifactId>
           <version>3.0.0</version>
         </plugin>
+
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-release-plugin</artifactId>
+          <version>3.0.0-M7</version>
+          <configuration>
+            <tagNameFormat>v@{project.version}</tagNameFormat>
+          </configuration>
+        </plugin>
+
       </plugins>
     </pluginManagement>
   </build>
