--- a/weather-report/pom.xml
+++ b/weather-report/pom.xml
@@ -5,7 +5,7 @@
 
   <groupId>tec.bd</groupId>
   <artifactId>weather-report</artifactId>
-  <version>1.0.0</version>
+  <version>1.0.1-SNAPSHOT</version>
 
   <name>weather-report</name>
   <!-- FIXME change it to the project's website -->
