--- a/.github/workflows/weather-report-build.yml
+++ b/.github/workflows/weather-report-build.yml
@@ -25,6 +25,8 @@ jobs:
         with:
           java-version: '11'
           distribution: 'adopt'
+          server-id: 'github'
+          cache: 'maven'
       - name: Cache Maven packages
         uses: actions/cache@v3
         with:
@@ -33,5 +35,15 @@ jobs:
           restore-keys: ${{ runner.os }}-m2
       - name: Build with Maven
         run: mvn -B install --file weather-report/pom.xml
+      - name: Configure Git user
+        run: |
+          git config user.email "actions@github.com"
+          git config user.name "GitHub Actions"
+      - name: Publish JAR Dry Run
+        run: ./mvnw -B release:prepare -DdryRun
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  
+
+
 
 
