--- a/.github/workflows/weather-report-build.yml
+++ b/.github/workflows/weather-report-build.yml
@@ -40,7 +40,7 @@ jobs:
           git config user.email "actions@github.com"
           git config user.name "GitHub Actions"
       - name: Publish JAR Dry Run
-        run: ./mvnw -B release:prepare -DdryRun
+        run: mvn -B release:prepare -DdryRun
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  
 
