--- a/weather-report/pom.xml
+++ b/weather-report/pom.xml
@@ -5,7 +5,7 @@
 
   <groupId>tec.bd</groupId>
   <artifactId>weather-report</artifactId>
-  <version>1.0.1</version>
+  <version>1.0.1-SNAPSHOT</version>
 
   <name>weather-report</name>
   <!-- FIXME change it to the project's website -->
@@ -19,7 +19,6 @@
 
   <scm>
     <developerConnection>scm:git:https://github.com/martinicr/tec-bd1.git</developerConnection>
-    <tag>v1.0.1</tag>
   </scm>
 
   <distributionManagement>
