nuevo archivo para release

--- a/.github/workflows/weather-report-build.yml
+++ b/.github/workflows/weather-report-build.yml
@@ -40,7 +40,7 @@ jobs:
           git config user.email "actions@github.com"
           git config user.name "GitHub Actions"
       - name: Publish JAR Dry Run
-        run: mvn -B release:prepare release:perform -DdryRun -DskipTests --file weather-report/pom.xml
+        run: mvn -B release:prepare release:perform -DdryRun --file weather-report/pom.xml
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  
 
