--- a/.github/workflows/weather-report-release.yml
+++ b/.github/workflows/weather-report-release.yml
@@ -1,7 +1,9 @@
 name: Publish package to GitHub Packages
+# Definición de eventos
 on:
-  release:
-    types: [created]
+  push:
+    branches:
+      - release
 
     paths:
       - weather-report/**
