--- a/.github/workflows/weather-report-release.yml
+++ b/.github/workflows/weather-report-release.yml
@@ -21,11 +21,12 @@ jobs:
         with:
           java-version: '11'
           distribution: 'adopt'
+          server-id: 'github'
       - name: Configure Git user
         run: |
           git config user.email "actions@github.com"
           git config user.name "GitHub Actions"
-      - name: Publish JAR Dry Run
+      - name: Publish JAR
         run: mvn -B release:prepare release:perform --file weather-report/pom.xml
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
