actualizando archivo de release

--- a/.github/workflows/weather-report-release.yml
+++ b/.github/workflows/weather-report-release.yml
@@ -27,6 +27,8 @@ jobs:
           git config user.email "actions@github.com"
           git config user.name "GitHub Actions"
       - name: Publish JAR
-        run: mvn -B release:prepare release:perform --file weather-report/pom.xml
+        run: | 
+          mvn -B release:prepare --file weather-report/pom.xml
+          mvn -B release:perform --file weather-report/pom.xml -s $GITHUB_WORKSPACE/settings.xml
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
