--- a/.github/workflows/weather-report-release.yml
+++ b/.github/workflows/weather-report-release.yml
@@ -29,6 +29,6 @@ jobs:
       - name: Publish JAR
         run: | 
           mvn -B release:prepare --file weather-report/pom.xml
-          mvn -B release:perform --file weather-report/pom.xml -s $GITHUB_WORKSPACE/settings.xml
+          mvn release:perform --file weather-report/pom.xml -s $GITHUB_WORKSPACE/settings.xml
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
