--- a/.github/workflows/weather-report-release.yml
+++ b/.github/workflows/weather-report-release.yml
@@ -13,7 +13,9 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     permissions:
-      contents: read
+      contents: write
+      actions: write
+      repository-projects: write
       packages: write
     steps:
       - uses: actions/checkout@v3
@@ -23,12 +25,14 @@ jobs:
           distribution: 'adopt'
           server-id: 'github'
           settings-path: ${{ github.workspace }}
-      - name: Configure Git user
-        run: |
-          git config user.email "actions@github.com"
-          git config user.name "GitHub Actions"
+      # - name: Configure Git user
+      #   run: |
+      #     git config user.email "actions@github.com"
+      #     git config user.name "GitHub Actions"
       - name: Publish JAR
         run: | 
+          git config user.email "actions@github.com"
+          git config user.name "GitHub Actions"
           mvn -B release:prepare --file weather-report/pom.xml
           mvn release:perform --file weather-report/pom.xml -s $GITHUB_WORKSPACE/settings.xml
         env:
