--- a/.github/workflows/weather-report-build.yml
+++ b/.github/workflows/weather-report-build.yml
@@ -34,7 +34,7 @@ jobs:
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
       - name: Build with Maven
-        run: mvn -B install --file weather-report/pom.xml
+        run: mvn -B package assembly:single --file weather-report/pom.xml
       - name: Configure Git user
         run: |
           git config user.email "actions@github.com"
